@@ -1,3 +1,8 @@
+2005-02-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.texi, trampinst.texi: Replace "Linux" by "GNU/Linux".
+	Suggested by Richard M. Stallman <rms@gnu.org>
+
 2005-02-09  Kim F. Storm  <storm@cua.dk>
 
 	Change release version from 21.4 to 22.1 throughout.
