@@ -1,3 +1,13 @@
+2005-02-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* INSTALL: Replace "Linux" by "GNU/Linux".  Suggested by Richard
+	M. Stallman <rms@gnu.org>
+
+	* aclocal.m4 (AC_PATH_LISPDIR): Document an alternative approach
+	configuring `lispdir'.  Not activated (yet).
+
+	* configure.ac: Documentation fix.
+
 2005-02-09  Kim F. Storm  <storm@cua.dk>
 
 	Change release version from 21.4 to 22.1 throughout.
